# baicai-notebook

./: .gitignore  AGENTS.md  LICENSE  README.md  index.md  opencode.json  pyproject.toml
.opencode/: vault-config.json
.opencode/agents/: brainstorm-catalyst.md  provenance-auditor.md  vault-orchestrator.md  vault-researcher.md  wiki-curator.md
.opencode/commands/: brainstorm.md  debug.md  discover-requirements.md  export-csv.md  fill-docx.md  generate-template.md  ingest.md  lint-brain.md  lint-vault.md  pdf2md.md  process-pending.md  query.md  rename-vault.md  solidify.md  write_plan.md
.opencode/plugins/: vault-query-router.ts
.opencode/rules/: core-vault.md  debug-mode.md  edit-policy.md  low-confidence-brainstorm.md  metadata-conventions.md  periodic-lint.md  post-brainstorm-solidify.md  post-ingest-solidify.md  promotion-policy.md  query-confidence.md  query-on-interaction.md  template-gen-paths.md
.opencode/scripts/: migrate-vault-path.mjs  vault-paths.mjs
Templates/: Intermedia Note.md  Zotero Template.md
brainstorm/: index.md
docs/: idea.md  metadata-field-matrix.md  metadata-policy-audit-2026-04-24.md  routing-flows.md  sqlite-dataview-alignment.md  todo.md  tutorial.md
my-work/: skill.md  全能语文能力进阶操作指南.md  学生应该如何提升语文能力.md  定格六圈：豆神大语文高分作文技法指南.md  底层逻辑.md  纵深阅读：从技术掌握到素养积淀.md  薛法根老师提到的“文本解读六种方法”.md  薛法根：文本解读的六种方法.md  阅读理解中有哪些最容易丢分的“大坑”.md  阅读理解能力如何锻炼.md
output/: index.md
tests/: test_filler.py  test_generate_fill_data.py  test_generator.py  test_parser.py  test_placeholder_description_csv.py
wiki/: index.md  log.md
(+74 files in other folders)
